# ascend-transformer-boost

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists.txt.rej  Doxyfile  LICENSE  OAT.xml  OWNERS  README.en.md  README.md  README_WEBUI.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  buildLccl.sh  my_changes.patch  my_changes.txt  original.patch  pyprojecttoml  version.info
core/: CMakeLists.txt
core/base/: CMakeLists.txt  config.cpp  graph_operation.cpp  graph_runner.cpp  hccl_runner.cpp  kernel_cache.cpp  lccl_runner.cpp  operation.cpp  operation_call.cpp  operation_graph.cpp  ops_runner.cpp  plan.cpp  plan_builder.cpp  planv2.cpp  runner.cpp  runner_variant_pack.cpp  share_memory.cpp  statistic.cpp  variant_pack.cpp
core/context/: CMakeLists.txt  buffer_base.cpp  buffer_device.cpp  buffer_host.cpp  buffer_host.h  buffer_rt.cpp  buffer_rt.h  context.cpp  work_context.cpp
core/include/acltransformer/: acltransformer.h  config.h  graph_operation.h  graph_runner.h  handle.h  hccl_comm_pool.h  kernel_cache.h  kernel_type.h  lccl_comm_pool.h  operation.h  operation_call.h  operation_graph.h  plan.h  plan_builder.h  planv2.h  runner.h  runner_builder.h  runner_type.h  (+4 more)
core/ops/: CMakeLists.txt
core/runner/: CMakeLists.txt  graph_runner.cpp  ops_runner.cpp  runner.cpp  runner_graph.cpp
core/torch/: CMakeLists.txt  torch_util.cpp
core/utils/: CMakeLists.txt  tensor_cache.cpp  tensor_util.cpp
example/atb_aclnn/: CMakeLists.txt  README.md  build.sh  main.cpp
example/multiStream/: CMakeLists.txt  README.md  multiStream_demo.cpp  multiStream_multiGraph_demo.cpp  multiStream_singleGraph_demo.cpp
examples/torch/: CMakeLists.txt  tensor_testcase.py  test.py
examples/utils/: CMakeLists.txt  example_util.cpp  example_util.h  example_utils.cpp  example_utils.h
ops_customize/: CMakeLists.txt  README.md  build.sh  ops.cpp
ops_customize/common/: customize_operation_ir_cfg.cpp  param_to_jason.cpp  runner_type.h
ops_customize/customize_ops_configs/: customize_ops_info.ini
ops_customize/include/: customize_op_params.h  customize_operation_ir_cfg.h  param_to_jason.h
ops_customize/ops/: CMakeLists.txt  ops.cpp  param_to_json.cpp  sym_check.cpp
ops_usr_define/: CMakeLists.txt
ops_usr_define/common/: atb_ops_info.ini  param_compare.cpp  param_to_jason.cpp  runner_type.h
ops_usr_define/include/: customize_op_params.h  param_compare.h  param_to_jason.h  usr_define_op_params.h
src/atb_mixops/: CMakeLists.txt
src/kernels/: CMakeLists.txt  coc_preprocessor.cce
src/torch_atb/: CMakeLists.txt  bindings.cpp  enger_graph_builder.cpp  enger_graph_builder.h  graph_node.cpp  graph_node.h  graph_operation_builder.cpp  graph_operation_builder.h  operation_wrapper.cpp  operation_wrapper.h
tests/: CMakeLists.txt
tests/cinterface/: CMakeLists.txt  c_interface_utils.cpp  c_interface_utils.h  fused_add_topk_c_interface_test.cpp  mla_c_interface_test.cpp  mla_prefill_c_interface_test.cpp  mla_preprocess_c_interface_test.cpp  paged_cache_load_c_interface_test.cpp  ring_mla_c_interface_test.cpp  self_attention_prefix_encoder_c_interface_test.cpp
tests/dailytest/: dailytest.sh  model_test.py
tests/high_level_test/: README.md  operation_test.py
tests/infratest/: infratest_utils.py  multi_stream_test.py  profiling_test.py  synchronize_test.py  task_runner.py  test_compare_tiling_every_kernel.py  test_kernel_cache.py  test_log_file.py  test_mem_alloc_algorithm.py  test_setup_cache.py  test_svector.py
tests/modeltest/: chatglm6b_test.py  llama1_13b_test.py  llama1_7b_test.py  llama2_13b_test.py  llama2_7b_test.py  llama7b_test.py  model_test.py
tests/performancetest/: bloom_7b_test.py  chatglm2_6b_test.py  chatglm6b_test.py  gptneox_20b_test.py  llama1_13b_test.py  llama1_7b_test.py  llama2_13b_test.py  llama2_7b_test.py  llama_13b_parallel_test.py  model_test.py
tests/precisiontest/: bloom_7b_test.py  chatglm2_6b_test.py  chatglm6b_test.py  llama1_13b_test.py  llama1_7b_test.py  llama2_13b_test.py  llama2_7b_test.py  llama_13b_parallel_test.py
tests/proftest/: CMakeLists.txt  main.cpp
tests/pythontest/: pythontest.sh
tests/unittest/: CMakeLists.txt
torch/: CMakeLists.txt
torch/context/: buffer_base.cpp  buffer_base.h  buffer_device.cpp  buffer_device.h  buffer_host.cpp  buffer_host.h  context.cpp  context.h
torch/model/: chatglm6bmodel_all_param.cpp  chatglm6bmodel_all_param.h  chatglm6bmodel_decoder_all_torch.cpp  chatglm6bmodel_decoder_all_torch.h  chatglm6bmodel_decoder_flashattention_torch.cpp  chatglm6bmodel_decoder_flashattention_torch.h  chatglm6bmodel_decoder_quant_flash_torch.cpp  chatglm6bmodel_decoder_quant_flash_torch.h  chatglm6bmodel_decoder_quant_torch.cpp  chatglm6bmodel_decoder_quant_torch.h  chatglm6bmodel_decoder_rope_torch.cpp  chatglm6bmodel_decoder_rope_torch.h  chatglm6bmodel_decoder_torch.cpp  chatglm6bmodel_decoder_torch.h  chatglm6bmodel_decoder_without_fusion_torch.cpp  chatglm6bmodel_decoder_without_fusion_torch.h  chatglm6bmodel_encoder_quant_torch.cpp  chatglm6bmodel_encoder_quant_torch.h  chatglm6bmodel_encoder_rope_torch.cpp  chatglm6bmodel_encoder_rope_torch.h  chatglm6bmodel_encoder_torch.cpp  chatglm6bmodel_encoder_torch.h  chatglm6bmodel_encoder_without_fusion_torch.cpp  chatglm6bmodel_encoder_without_fusion_torch.h  chatglm6bmodel_flashattention_param.cpp  chatglm6bmodel_flashattention_param.h  chatglm6bmodel_param.cpp  chatglm6bmodel_param.h  chatglm6bmodel_quant_flash_param.cpp  chatglm6bmodel_quant_flash_param.h  chatglm6bmodel_quant_param.cpp  chatglm6bmodel_quant_param.h  chatglm6bmodel_quant_torch.cpp  chatglm6bmodel_quant_torch.h  glm130bmodel_decoder_torch.cpp  glm130bmodel_decoder_torch.h  glm130bmodel_encoder_torch.cpp  glm130bmodel_encoder_torch.h  glm130bmodel_param.cpp  glm130bmodel_param.h  (+6 more)
torch/model_v2/: model.cpp  model.h  model_torch.cpp  model_torch.h
torch/operation/: operation_creator.cpp  operation_creator.h  operation_torch.cpp  operation_torch.h
torch/utils/: utils.cpp  utils.h
torch/workspace/: workspace_base.cpp  workspace_rt.h  workspace_torch.cpp
(+5811 files in other folders)
