file(GLOB_RECURSE MEM_ALLOC_SOURCE
    "${CMAKE_CURRENT_LIST_DIR}/mem_allocation_solver/*.cpp")
file(GLOB_RECURSE PROFILING_SOURCE
    "${CMAKE_CURRENT_LIST_DIR}/profiling/*.cpp")
file(GLOB SOURCE_FILES "${CMAKE_CURRENT_LIST_DIR}/*.cpp")

list(APPEND SOURCE_FILES "${MEM_ALLOC_SOURCE}")

list(APPEND SOURCE_FILES "${PROFILING_SOURCE}")

add_library(core_utils OBJECT ${SOURCE_FILES})